--- a/forum/templates/signup.html
+++ b/forum/templates/signup.html
@@ -1,11 +1,9 @@
-<!-- Displaying Forms, see routes forms function -->
-
 {% extends "base.html" %}
 {% set active_page='signup' %}
 {% block title %}  Sign Up  {% endblock %}
 {% block content %}
 <form action="" method="POST">
-    {{ form.hidden_tag() }} <!-- Mainly copy this section just not variable names match from routes -->
+    {{ form.hidden_tag() }}
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">Sign Up</legend>
         <div class="form-group">
@@ -13,7 +11,7 @@
             {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.username.errors %} <!--Dispalys the errors from the validators in the form class -->
+                    {% for error in form.username.errors %}
                         <span>{{ error }}</span>
                     {% endfor %}
                 </div>
