--- a/forum/templates/view_post.html
+++ b/forum/templates/view_post.html
@@ -45,14 +45,14 @@
 
 <h3>Leave a Comment:</h3>
 <form action="" method="POST">
-    {{ form.hidden_tag() }} <!-- Mainly copy this section just not variable names match from routes -->
+    {{ form.hidden_tag() }}
     <fieldset class="form-group">
         <div class="form-group">
             {{ form.text.label(class="form-control-label") }}
             {% if form.text.errors %}
                 {{ form.text(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.text.errors %} <!--Dispalys the errors from the validators in the form class -->
+                    {% for error in form.text.errors %}
                         <span>{{ error }}</span>
                     {% endfor %}
                 </div>
