--- a/forum/templates/index.html
+++ b/forum/templates/index.html
@@ -2,8 +2,7 @@
 {% set active_page='home' %}
 {% block title %}  {{title}}  {% endblock %}
 {% block content %}
-<h1>Welcome to My Forum</h1>
-<p>Feel free to upload anything you want. Don't forget to sign up and login!</p>
-<a href="https://github.com/Loveroin/Forum" class="btn btn-primary">View on GitHub</a>
+<h1>Welcome to Joey's Forum</h1>
+<p>Sign up and login to participate!</p>
 
 {% endblock %}
